# shimmen-lan-suite

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/aegis/: INDEX.md
docs/aegis/plans/: 2026-05-25-lan-suite-v1-implementation.md  2026-05-27-network-layer-bug-fix.md
docs/aegis/specs/: 2026-05-25-lan-collaboration-suite-brief.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  webview2_check.rs
src-tauri/src/commands/: ai.rs  announcement.rs  avatar.rs  board.rs  chat.rs  config.rs  dialog.rs  file_index.rs  file_transfer.rs  folder_sync.rs  mod.rs  network.rs  screen_share.rs  system.rs  tools.rs  update.rs  vault.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/file_index/: indexer.rs  mod.rs  network.rs
src-tauri/src/file_sync/: engine.rs  history.rs  indexer.rs  mod.rs  watcher.rs
src-tauri/src/models/: mod.rs
src-tauri/src/network/: client.rs  connection.rs  discovery.rs  folder_cache.rs  leader.rs  mod.rs  peer.rs  protocol.rs  server.rs
src-tauri/src/system/: autostart.rs  crypto.rs  mod.rs  tray.rs
src/components/board/: KanbanBoard.tsx  KanbanColumn.tsx  TaskCard.tsx  TeamBoard.tsx
src/components/chat/: ChatMessage.tsx  ChatWindow.tsx  FilePreviewModal.tsx  TransferWindow.tsx
src/components/common/: IconButton.tsx  UpdatePrompt.tsx
src/hooks/: useAvatar.ts  useChat.ts  useFolders.ts  useTasks.ts
src/types/: index.ts
(+26 files in other folders)
