[package]
name = "shimmen-lan-suite"
version = "0.1.8"
description = "内网去中心化协同工具"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2_sqlite = "0.25"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
confy = "0.6"
winreg = "0.52"
whoami = "1.5"
walkdir = "2"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
notify = "6.1"
base64 = "0.22"
aes-gcm = "0.10"
rfd = "0.14"
log = "0.4"
simplelog = { version = "0.12", features = ["local-offset"] }
dirs = "5"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
ureq = { version = "2", features = ["json"] }
sysinfo = "0.36.1"
tauri-plugin-updater = "2.0.0-rc.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
